GroceryPackage/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewArrival</fullName>
            </value>
            <value>
                <fullName>BestSeller</fullName>
            </value>
            <value>
                <fullName>OnSale</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>