GroceryPackage/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>