GroceryPackage/main/default/objects/Product2/validationRules/Product_price.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_price</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt; 0.50  ||  Price__c  &gt; 100</errorConditionFormula>
    <errorMessage>The price must be within the range from $0.50 to $100.00</errorMessage>
</ValidationRule>