GroceryPackage/main/default/objects/Product2/validationRules/Product_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_quantity</fullName>
    <active>true</active>
    <description>Product quantity can not be less than 50</description>
    <errorConditionFormula>Quantity__c  &lt; 50</errorConditionFormula>
    <errorMessage>Quantity can not be less than 50</errorMessage>
</ValidationRule>