GroceryPackage/main/default/objects/Product2/listViews/Product_List.listView-meta.xml
<ListView>
    <fullName>Product_List</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>StockQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product List</label>
</ListView>